FIX: Espace hamburger-tel mobile (1.5rem) + About EN avec logo officiel

--- a/index-en.html
+++ b/index-en.html
@@ -163,7 +163,14 @@
                 </div>
                 <div class="about-image">
                     <div class="about-card">
-                        <img src="images/hero-bg.jpg" alt="Technician inspecting fire extinguisher">
+                        <img src="images/logo-speedex-official.png" alt="Speedex Fire Extinguishers Logo">
+                        <div class="about-badge">
+                            <i class="fas fa-award"></i>
+                            <div>
+                                <strong>15+</strong>
+                                <span>Years of experience</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
